--- a/.github/workflows/nightly_tests_and_veracode.yml
+++ b/.github/workflows/nightly_tests_and_veracode.yml
@@ -84,6 +84,11 @@ jobs:
         uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.14.1
       - name: "Build application"
         run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install -DskipTests
+      - name: "Check availability of dependencies"
+        run: |
+          mvn dependency:get -Dartifact=org.alfresco:alfresco-hxinsight-connector-common-authentication:2.0.1-SNAPSHOT
+          mvn dependency:get -Dartifact=org.alfresco:alfresco-hxinsight-connector-common-test:2.0.1-SNAPSHOT
+          mvn dependency:get -Dartifact=org.alfresco:alfresco-hxinsight-connector-common-authentication:tests:2.0.1-SNAPSHOT
       - name: "Run OpenApi Specification tests"
         run: mvn test -Dtest=OpenApiRequestValidationTest -pl live-ingester
 #      - name: "Notify on failure"
