--- a/.github/workflows/nightly_tests_and_veracode.yml
+++ b/.github/workflows/nightly_tests_and_veracode.yml
@@ -84,8 +84,11 @@ jobs:
         uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.14.1
       - name: "Build application"
         run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install -DskipTests
-      - name: "Clean Maven cache"
-        run: bash ./scripts/ci/cleanup_cache.sh
+      - name: "Clear local Maven repository cache for specific dependencies"
+        run: |
+            rm -rf ~/.m2/repository/org/alfresco/alfresco-hxinsight-connector-common-authentication
+            rm -rf ~/.m2/repository/org/alfresco/alfresco-hxinsight-connector-common-test
+            rm -rf ~/.m2/repository/org/alfresco/alfresco-hxinsight-connector-common-authentication/tests
       - name: "Check availability of dependencies"
         run: |
           mvn dependency:get -Dartifact=org.alfresco:alfresco-hxinsight-connector-common-authentication:2.0.1-SNAPSHOT -U
