--- a/.github/workflows/nightly_tests_and_veracode.yml
+++ b/.github/workflows/nightly_tests_and_veracode.yml
@@ -9,7 +9,6 @@ on:
 
   push:
     branches:
-      - feature/**
       - master
       - release/**
   schedule:
@@ -17,10 +16,6 @@ on:
 
 env:
   MAVEN_CLI_OPTS: "-B -e -fae -V -DinstallAtEnd=true -DfailIfNoTests=false -U -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -Pdistribution "
-  MAVEN_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
-  MAVEN_USERNAME: ${{ secrets.NEXUS_USERNAME }}
-  JAVA_VERSION: "17"
-  JAVA_VERSION_SUPPORTED_BY_REPO: "11"
 
 jobs:
   veracode_sca:
@@ -83,9 +78,9 @@ jobs:
       - name: "Set up JDK"
         uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.14.1
       - name: "Build SNAPSHOT dependencies"
-        run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install -U -DskipTests -pl common-authentication,common-test
+        run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install -DskipTests -pl common-authentication,common-test
       - name: "Build application"
-        run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install -U -DskipTests
+        run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install -DskipTests
       - name: "Run OpenApi Specification tests"
         run: mvn test -Dtest=OpenApiRequestValidationTest -pl live-ingester
 #      - name: "Notify on failure"
