--- a/.github/workflows/nightly_tests_and_veracode.yml
+++ b/.github/workflows/nightly_tests_and_veracode.yml
@@ -3,7 +3,6 @@ name: Veracode and Nightly Tests run
 on:
   pull_request:
     branches:
-      - feature/**
       - master
       - release/**
 
@@ -71,7 +70,7 @@ jobs:
   nightly_tests:
     name: "Run nightly tests"
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
+    if: github.event_name == 'schedule'
     steps:
       - name: "Checkout repository"
         uses: actions/checkout@v4
