sanitize the response.body()

--- a/common-authentication/pom.xml
+++ b/common-authentication/pom.xml
@@ -70,6 +70,10 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.owasp.encoder</groupId>
+            <artifactId>encoder</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
