--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,7 @@
         <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
         <spotless-plugin.version>2.44.3</spotless-plugin.version>
         <jrebel-maven-plugin.version>1.2.1</jrebel-maven-plugin.version>
+        <encoder.version>1.3.1</encoder.version>
 
         <!-- Used by the generated .env file and Dockerfile for docker-compose -->
         <dist.alfresco.docker.user>alfresco</dist.alfresco.docker.user>
@@ -299,6 +300,11 @@
                 <groupId>com.atlassian.oai</groupId>
                 <artifactId>swagger-request-validator-core</artifactId>
                 <version>${swagger-request-validator.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.owasp.encoder</groupId>
+                <artifactId>encoder</artifactId>
+                <version>${encoder.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
