--- a/.github/workflows/nightly_tests_and_veracode.yml
+++ b/.github/workflows/nightly_tests_and_veracode.yml
@@ -65,6 +65,7 @@ jobs:
           summary_output_file: results.json
           summary_display: true
           baseline_file: baseline.json
+          include: "alfresco-hxinsight-connector-bulk-ingester-*,alfresco-hxinsight-connector-hxinsight-extension-*,alfresco-hxinsight-connector-live-ingester-*,alfresco-hxinsight-connector-prediction-applier-*"
       - name: "Clean Maven cache"
         run: bash ./scripts/ci/cleanup_cache.sh
 
