--- a/.github/workflows/nightly_tests_and_veracode.yml
+++ b/.github/workflows/nightly_tests_and_veracode.yml
@@ -49,8 +49,10 @@ jobs:
           repository: "Alfresco/veracode-baseline-archive"
           file-path: "hxinsight-connector/hxinsight-connector-baseline.json"
           target: "baseline.json"
+      - name: "Build SNAPSHOT dependencies"
+        run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install -U -DskipTests -pl bulk-ingester -am
       - name: "Build application"
-        run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install -DskipTests -U
+        run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install -DskipTests
       - name: "Run SAST Scan"
         uses: veracode/Veracode-pipeline-scan-action@v1.0.18
         with:
@@ -65,7 +67,6 @@ jobs:
           summary_output_file: results.json
           summary_display: true
           baseline_file: baseline.json
-          include: "alfresco-hxinsight-connector-bulk-ingester-*,alfresco-hxinsight-connector-hxinsight-extension-*,alfresco-hxinsight-connector-live-ingester-*,alfresco-hxinsight-connector-prediction-applier-*"
       - name: "Clean Maven cache"
         run: bash ./scripts/ci/cleanup_cache.sh
 
