--- a/.github/workflows/nightly_tests_and_veracode.yml
+++ b/.github/workflows/nightly_tests_and_veracode.yml
@@ -53,7 +53,7 @@ jobs:
           target: "baseline.json"
       - name: "Build application"
         run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install -DskipTests
-      - name: "Run SAST Scan "
+      - name: "Run SAST Scan"
         uses: veracode/Veracode-pipeline-scan-action@v1.0.18
         with:
           vid: ${{ secrets.VERACODE_API_ID }}
@@ -67,6 +67,7 @@ jobs:
           summary_output_file: results.json
           summary_display: true
           baseline_file: baseline.json
+          include: "alfresco-hxinsight-connector-bulk-ingester-*,alfresco-hxinsight-connector-hxinsight-extension-*,alfresco-hxinsight-connector-live-ingester-*,alfresco-hxinsight-connector-prediction-applier-*"
       - name: "Clean Maven cache"
         run: bash ./scripts/ci/cleanup_cache.sh
 
