--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,6 +75,7 @@ jobs:
           project_name: hxinsight-connector
           issue_details: true
           veracode_policy_name: Alfresco Default
+          summary_output: true
           summary_display: false
           include: "alfresco-hxinsight-connector*"
       - name: "Clean Maven cache"
