--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,8 +67,10 @@ jobs:
           file: "distribution/target/alfresco-hxinsight-connector-distribution-*.zip"
           fail_build: true
           project_name: hxinsight-connector
+          issue_details: true
           veracode_policy_name: Alfresco Default
-          summary_display: false
+          summary_display: true
+          token: ""
       - name: "Clean Maven cache"
         run: bash ./scripts/ci/cleanup_cache.sh
 
