--- a/live-ingester/src/integration-test/resources/rest/hxinsight/requests/create-or-update-document.yml
+++ b/live-ingester/src/integration-test/resources/rest/hxinsight/requests/create-or-update-document.yml
@@ -28,11 +28,13 @@ body: [
         "annotation": "modifiedBy"
       },
       "createdAt": {
-        "value": 1611227655695,
+        "value": "2021-01-21T11:14:15.695Z",
+        "type": "datetime",
         "annotation": "dateCreated"
       },
       "modifiedAt": {
-        "value": 1611227655695,
+        "value": "2021-01-21T11:14:15.695Z",
+        "type": "datetime",
         "annotation": "dateModified"
       },
       "cm:versionType": {
