--- a/.github/workflows/nightly_tests_and_veracode.yml
+++ b/.github/workflows/nightly_tests_and_veracode.yml
@@ -28,9 +28,18 @@ jobs:
       - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.14.1
       - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.14.1
       - uses: Alfresco/alfresco-build-tools/.github/actions/veracode@v8.14.1
-        continue-on-error: true
+        continue-on-error: false
+        env:
+          MAVEN_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
+          MAVEN_USERNAME: ${{ secrets.NEXUS_USERNAME }}
         with:
           srcclr-api-token: ${{ secrets.SRCCLR_API_TOKEN }}
+      - name: "Notify on failure"
+        if: failure() && github.event_name == 'schedule'
+        uses: Alfresco/alfresco-build-tools/.github/actions/send-teams-notification@v8.14.1
+        with:
+          webhook-url: ${{ secrets.MS_TEAMS_WEBHOOK_URL }}
+          message: "Veracode SCA scan failed"
 
   nightly_tests:
     name: "Run nightly tests"
