--- a/live-ingester/pom.xml
+++ b/live-ingester/pom.xml
@@ -135,6 +135,11 @@
             <artifactId>swagger-request-validator-core</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
