--- a/.github/workflows/nightly_tests_and_veracode.yml
+++ b/.github/workflows/nightly_tests_and_veracode.yml
@@ -59,7 +59,7 @@ jobs:
       - name: "Clone TCK repository"
         run: bash ./scripts/ci/cloneTCK.sh -t ${{ secrets.GH_PACKAGES_RO_PAT }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_PACKAGES_RO_PAT }}
+          GHCR_PAT_RO: ${{ secrets.GH_PACKAGES_RO_PAT }}
       - name: "Set up Docker Buildx"
         uses: docker/setup-buildx-action@v3
       - name: "Build JSON service image"
