--- a/.github/workflows/nightly_tests_and_veracode.yml
+++ b/.github/workflows/nightly_tests_and_veracode.yml
@@ -15,6 +15,8 @@ on:
     - cron: "0 0 * * *"  # Runs every night at midnight
 
 env:
+  GHCR_USERNAME: ${{ github.actor }}
+  GHCR_PAT_RO: ${{ secrets.GH_PACKAGES_RO_PAT }}
   MAVEN_CLI_OPTS: "-B -e -fae -V -DinstallAtEnd=true -DfailIfNoTests=false -U -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -Pdistribution "
 
 jobs:
