--- a/.github/workflows/nightly_tests_and_veracode.yml
+++ b/.github/workflows/nightly_tests_and_veracode.yml
@@ -15,8 +15,6 @@ on:
     - cron: "0 0 * * *"  # Runs every night at midnight
 
 env:
-  GHCR_USERNAME: ${{ github.actor }}
-  GHCR_PAT_RO: ${{ secrets.GH_PACKAGES_RO_PAT }}
   MAVEN_CLI_OPTS: "-B -e -fae -V -DinstallAtEnd=true -DfailIfNoTests=false -U -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -Pdistribution "
 
 jobs:
@@ -59,9 +57,9 @@ jobs:
 #          username: ${{ github.actor }}
 #          password: ${{ secrets.GITHUB_TOKEN }}
       - name: "Clone TCK repository"
-        run: bash ./scripts/ci/cloneTCK.sh -t ${{ secrets.GH_PACKAGES_RO_PAT }}
+        run: bash ./scripts/ci/cloneTCK.sh -t ${{ secrets.HYLAND_TCK_TOKEN }}
         env:
-          GHCR_PAT_RO: ${{ secrets.GH_PACKAGES_RO_PAT }}
+          GHCR_PAT_RO: ${{ secrets.HYLAND_TCK_TOKEN }}
       - name: "Set up Docker Buildx"
         uses: docker/setup-buildx-action@v3
       - name: "Build JSON service image"
