--- a/.github/workflows/nightly_tests_and_veracode.yml
+++ b/.github/workflows/nightly_tests_and_veracode.yml
@@ -50,35 +50,10 @@ jobs:
       - name: "Checkout repository"
         uses: actions/checkout@v4
       - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.14.1
-      - name: Login to ghcr.io
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.HYLAND_TCK_PAT }}
       - name: "Clone TCK repository"
         run: bash ./scripts/ci/cloneTCK.sh -t ${{ secrets.HYLAND_TCK_PAT }}
-        env:
-          GHCR_PAT_RO: ${{ secrets.HYLAND_TCK_PAT }}
-      - name: "Set up Docker Buildx"
-        uses: docker/setup-buildx-action@v3
-      - name: "Build JSON service image"
-        uses: docker/build-push-action@v5
-        with:
-          context: ./ingestion-connector-tck/app
-          target: builder
-          load: true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-      - name: "Build API service image"
-        uses: docker/build-push-action@v5
-        with:
-          context: ./ingestion-connector-tck
-          file: ./ingestion-connector-tck/DockerfilePrism
-          target: builder
-          load: true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+      - name: "Build and start TCK services"
+        run: bash ./scripts/ci/buildTckImages.sh
       - name: "Set up JDK"
         uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.14.1
       - name: "Build application"
