--- a/.github/workflows/nightly_tests_and_veracode.yml
+++ b/.github/workflows/nightly_tests_and_veracode.yml
@@ -51,7 +51,7 @@ jobs:
         uses: actions/checkout@v4
       - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.14.1
       - name: "Clone TCK repository"
-        run: bash ./scripts/ci/cloneTCK.sh -t ${{ secrets.HYLAND_TCK_PAT }}
+        run: bash ./scripts/ci/cloneTCK.sh
       - name: "Build and start TCK services"
         run: bash ./scripts/ci/buildTckImages.sh
       - name: "Set up JDK"
