--- a/.github/workflows/nightly_tests_and_veracode.yml
+++ b/.github/workflows/nightly_tests_and_veracode.yml
@@ -52,6 +52,8 @@ jobs:
       - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.14.1
       - name: "Clone TCK repository"
         run: bash ./scripts/ci/cloneTCK.sh
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: "Build and start TCK services"
         run: bash ./scripts/ci/buildTckImages.sh
       - name: "Set up JDK"
