--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ distribution/src/main/resources/docker-compose/.env
 distribution/src/main/resources/docker-compose/volume
 # This is produced by the maven-shade-plugin
 dependency-reduced-pom.xml
+
+# This is cloned from the ingestion-connector-tck for testing only
+ingestion-connector-tck
