--- a/.github/workflows/nightly_tests_and_veracode.yml
+++ b/.github/workflows/nightly_tests_and_veracode.yml
@@ -1,5 +1,8 @@
 name: Veracode and Nightly Tests run
 
+permissions:
+  contents: read
+
 on:
   pull_request:
     branches:
@@ -20,7 +23,9 @@ jobs:
   veracode_sca:
     name: "Veracode - Source Clear Scan (SCA)"
     runs-on: ubuntu-latest
-    secrets: inherit
+    permissions:
+      contents: read
+      security-events: write
     if: >
       (github.event_name == 'schedule' || github.actor == 'dependabot[bot]') &&
       !contains(github.event.head_commit.message, '[skip build]')
