add push on feature branch [skip build]

--- a/.github/workflows/nightly_tests_and_veracode.yml
+++ b/.github/workflows/nightly_tests_and_veracode.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - feature/**
 
+  push:
+    branches:
+      - feature/**
+
   schedule:
     - cron: "0 0 * * *"  # Runs every night at midnight
 
