--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -223,8 +223,13 @@ jobs:
       github.event_name != 'pull_request' &&
       contains(github.event.head_commit.message, '[release]')
     steps:
+      - name: "Checkout repository"
+        uses: actions/checkout@v4
       - name: "Run TCK Tests"
-        uses: ./.github/workflows/_tck_tests.yml
+        uses: ./.github/actions/tck-tests
+        with:
+          hyland-tck-pat: ${{ secrets.HYLAND_TCK_PAT }}
+          maven-cli-opts: ${{ env.MAVEN_CLI_OPTS }}
 
   push_docker_images:
     name: "Push docker images"
