--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -15,6 +15,9 @@ on:
   schedule:
     - cron: "0 0 * * *"  # Runs every night at midnight
 
+env:
+  MAVEN_CLI_OPTS: "-B -e -fae -V -DinstallAtEnd=true -DfailIfNoTests=false -U -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -Pdistribution "
+
 jobs:
   analyze:
     name: Analyze (${{ matrix.language }})
@@ -50,7 +53,7 @@ jobs:
 
     - name: Build with Maven
       if: matrix.build-mode == 'manual'
-      run: mvn clean package -DskipTests
+      run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install -DskipTests
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
