--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -50,6 +50,9 @@ jobs:
     - name: Setup Java Build
       if: matrix.build-mode == 'manual'
       uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.14.1
+      env:
+        MAVEN_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
+        MAVEN_USERNAME: ${{ secrets.NEXUS_USERNAME }}
 
     - name: Build with Maven
       if: matrix.build-mode == 'manual'
