--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.alfresco</groupId>
         <artifactId>alfresco-hxinsight-connector-parent</artifactId>
-        <version>2.0.2-SNAPSHOT</version>
+        <version>2.0.0-A.3</version>
     </parent>
 
     <name>Alfresco Connector for Hyland Experience Insight :: Distribution zip</name>
