--- a/.github/workflows/nightly_tests_and_veracode.yml
+++ b/.github/workflows/nightly_tests_and_veracode.yml
@@ -1,6 +1,12 @@
 name: Veracode and Nightly Tests run
 
 on:
+  pull_request:
+    branches:
+      - feature/**
+  push:
+    branches:
+      - feature/**
   schedule:
     - cron: "0 0 * * *"  # Runs every night at midnight
 
@@ -21,12 +27,12 @@ jobs:
           MAVEN_USERNAME: ${{ secrets.NEXUS_USERNAME }}
         with:
           srcclr-api-token: ${{ secrets.SRCCLR_API_TOKEN }}
-      - name: "Notify on failure"
-        if: failure()
-        uses: Alfresco/alfresco-build-tools/.github/actions/send-teams-notification@v8.14.1
-        with:
-          webhook-url: ${{ secrets.MS_TEAMS_WEBHOOK_URL }}
-          message: "Veracode SCA scan failed"
+#      - name: "Notify on failure"
+#        if: failure()
+#        uses: Alfresco/alfresco-build-tools/.github/actions/send-teams-notification@v8.14.1
+#        with:
+#          webhook-url: ${{ secrets.MS_TEAMS_WEBHOOK_URL }}
+#          message: "Veracode SCA scan failed"
 
   nightly_tests:
     name: "Run nightly tests"
