--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <name>Alfresco Connector for Hyland Experience Insight :: Parent</name>
     <artifactId>alfresco-hxinsight-connector-parent</artifactId>
-    <version>2.0.0-A.3</version>
+    <version>2.0.2-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
