--- a/.github/workflows/nightly_tests_and_veracode.yml
+++ b/.github/workflows/nightly_tests_and_veracode.yml
@@ -3,10 +3,10 @@ name: Veracode and Nightly Tests run
 on:
   pull_request:
     branches:
-      - /**
+      - ${{ github.ref_name }}
   push:
     branches:
-      - /**
+      - ${{ github.ref_name }}
   schedule:
     - cron: "0 0 * * *"  # Runs every night at midnight
 
